--- a/scripts/package.json
+++ b/scripts/package.json
@@ -8,18 +8,20 @@
 		"morgan": "^1.10.0",
 		"multer": "^1.4.5-lts.1",
 		"mysql": "^2.18.1",
-		"mysql2": "^3.11.5",
-		"nodemon": "^3.1.7"
+		"mysql2": "^3.11.5"
 	},
 	"name": "lel_shop",
 	"version": "1.0.0",
 	"description": "back_end_lel_shop",
 	"main": "functions.js",
 	"scripts": {
-		"start": "node function.js",
+		"start": "nodemon function.js",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "echo 'No build step needed for backend'"
 	},
 	"author": "",
-	"license": "ISC"
+	"license": "ISC",
+	"devDependencies": {
+		"nodemon": "^3.1.7"
+	}
 }
